# MUL_my_rpg_2017

./: .gdb_history  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README.md  hitbox  hitbox.txt  hitbox1  hitbox2  hitbox2.txt  install-dependencies.sh  peda-session-my_rpg.txt  test.py
assets/data/: maps.lua  tilesets.lua
assets/data/maps/: 1.lua
assets/graphics/spritesheets/: téléchargement
clement/: Makefile
clement/include/: event.h  game.h  state.h
clement/src/draw/: sprite.c
clement/src/event/: event.c
config/: assets.cfg  battle.cfg  default.cfg
config/heroes/: demo.cfg
config/maps/: map_1.cfg  maps.cfg
config/maps/hitboxes/: map1_hit  map2_hit
extern_libs/: Makefile
extern_libs/libconfig/: libtool
extern_libs/libconfig/doc/: libconfig.info
extern_libs/libconfig/lib/: libconfig++.pc  libconfig.pc
extern_libs/libconfig/tests/: libconfig_tests
include/: battle.h  cl.h  configuration.h  cook.h  debug.h  draw.h  event.h  game.h  lua.h  ressource.h  rpg.h  state.h  struct.h  structs.h  utils.h
lib/: Makefile  liblua.so.5.3.4
lib/cl/: Makefile
lib/cl/src/: cl_calloc.c  cl_get_occurrence.c  cl_is_in_str.c  cl_str_cmp.c  cl_strcat.c  cl_strchr.c  cl_strdup.c  cl_strlen.c
lib/lizz_overlay/: .gitignore  Makefile
lib/lizz_overlay/include/: config.h  debug.h  lizz.h  structs.h  utils.h
lib/lizz_overlay/src/: lizz.c
lib/lizz_overlay/tests/: main.c
lib/my/: Makefile
lib/my/include/: my.h
lib/my/src/: my_atoi.c  my_calloc.c  my_str_isnum.c  my_strcat.c  my_strcmp.c  my_strdup.c  my_strjoin.c  my_strtok.c
lucas/: Makefile
lucas/include/: battle.h  test.h
lucas/src/: main.c  test.c
lucas/src/display/: display_current_target.c  display_enemy_stats.c  display_interface.c
lucas/src/event/: deplacement.c  event_management.c  interaction.c  reset_map_state.c  select_or_unselect.c  selection_deplacement.c
lucas/src/free/: free_all.c
lucas/src/init/: init_data.c  init_fight.c  init_hero.c  init_rune.c
lucas/src/lib/: create_text.c  draw_text_type.c  my_itoa.c  wait_second.c
lucas/src/map/: display_interface.c  display_map.c  fill_map_state.c
saves/: clement_leroux.save  clement_tinarelli.save  cyril_colinet.save  demo.save  demo2.save  jean_mi.save  lucas_marcel.save  oui.save
src/: cook.c  game.c  initializer.c  main.c  rpg.c
src/assets/: assets_manager.c  buttons_loader.c  buttons_manager.c  sliders_loader.c  sliders_manager.c  sounds_manager.c  sprite_manager.c
src/assets/callback/: actions_callback.c  cb_load_save.c  goto_view_callback.c  goto_view_callback2.c
src/assets/loader/: views_config.c
src/assets/setup/: credits_buttons.c  options_buttons.c  options_sliders.c  wait_buttons.c
src/battle/: battle_management.c
src/battle/ai_enemy/: .#enemy_deplacement_left.c  display_enemy_damage.c  enemy_attack.c  enemy_attack_anim.c  enemy_deplacement_down.c  enemy_deplacement_left.c  enemy_deplacement_right.c  enemy_deplacement_up.c  enemy_turn.c
src/battle/display/: display_current_target.c  display_enemy_stats.c  display_interface.c  display_map.c  fill_map_state.c
src/callback/: default_callback.c  return_callback.c
src/configuration/: init_config.c
src/configurations/: player_configuration.c  views_config.c
src/debug/: assets_debugger.c  buttons_debugger.c  debugger.c  logger.c  sliders_debugger.c
src/draw/: anim.c  interface.c  map.c  map_layer.c  sprite.c  sprite_anim.c  tile.c
src/events/: events_manager.c  init_events.c  keyboard_events.c  mouse_events.c  views_events.c
src/free/: free_all.c
src/inventory/: change_texture.c  check_stat_value.c  draw_obj_stat.c  draw_stat_player.c  draw_unequip_message.c  equip_obj_management.c  find_free_slot.c  swap_armor_stat.c  swap_weapon_stat.c
src/lua/: lua_table_get.c  lua_table_goto.c
src/managers/: assets_loader_manager.c  assets_manager.c  events_manager.c  player_manager.c  player_manager1.c  player_manager2.c  sounds_manager.c  state_manager.c
src/parser/: battle_character_parser.c  battle_fights_parser.c  map_parser.c  parse_inventory.c  parse_map_hitboxes.c  parse_player.c  parser.c
src/player/: call_interaction.c  check_valid_deplacement.c  display_message.c  go_in_city.c  go_out_city.c  go_to_campagne.c  go_to_castle.c  go_to_city.c  go_to_spawn.c  player_deplacement.c  player_interaction.c  player_interaction.c~  player_manager1.c  player_manager2.c  start_fight_1.c  start_fight_2.c  start_fight_3.c  talk_to_paysan.c  talk_to_soldier.c  talk_to_totem.c  talk_to_trader.c
src/ressource/: ressource.c  tileset.c
src/saves/: save_current_party.c  save_loader.c
src/sound/: sounds_manager.c
src/state/: interface.c  play.c  play_loader.c
src/tasks/: background_task.c
src/util_function/: create_text.c  draw_text_type.c  my_itoa.c  wait_second.c
src/utilities/: args_handling.c  debug_utils.c  destroy_utilities.c  display_utils.c  fct_pointers.c  options_manager.c  rect_utils.c  settings_utils.c  sound_manager.c  sound_utils.c  struct_utils.c  vector_utils.c  views_utils.c  windows_utils.c
src/utils/: struct_utils.c  utils0.c
src/views/: battle_view.c  credits_view.c  display_view.c  inventory_view.c  load_view.c  main_view.c  menu_views.c  menu_views2.c  options_view.c  play_view.c  quests_view.c  skills_view.c
(+188 files in other folders)
