cmake_minimum_required(VERSION 3.10)
project(my_rpg_2017 C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(lib/my/include)

add_executable(my_rpg_2017
        include/battle.h
        include/debug.h
        include/rpg.h
        include/structs.h
        lib/my/include/my.h
        lib/my/src/my_atoi.c
        lib/my/src/my_calloc.c
        lib/my/src/my_countwords.c
        lib/my/src/my_freetab.c
        lib/my/src/my_put_nbr.c
        lib/my/src/my_putchar.c
        lib/my/src/my_putstr.c
        lib/my/src/my_str_isnum.c
        lib/my/src/my_strcat.c
        lib/my/src/my_strcmp.c
        lib/my/src/my_strconfigure.c
        lib/my/src/my_strcpy.c
        lib/my/src/my_strdup.c
        lib/my/src/my_strendswith.c
        lib/my/src/my_strequ.c
        lib/my/src/my_strjoin.c
        lib/my/src/my_strjoin_char.c
        lib/my/src/my_strjoin_clear.c
        lib/my/src/my_strlen.c
        lib/my/src/my_strstartswith.c
        lib/my/src/my_strtok.c
        src/battle/ai_enemy/display_enemy_damage.c
        src/battle/ai_enemy/enemy_attack.c
        src/battle/ai_enemy/enemy_attack_anim.c
        src/battle/ai_enemy/enemy_deplacement_down.c
        src/battle/ai_enemy/enemy_deplacement_left.c
        src/battle/ai_enemy/enemy_deplacement_right.c
        src/battle/ai_enemy/enemy_deplacement_up.c
        src/battle/ai_enemy/enemy_turn.c
        src/battle/display/display_current_target.c
        src/battle/display/display_enemy_stats.c
        src/battle/display/display_interface.c
        src/battle/display/display_map.c
        src/battle/display/fill_map_state.c
        src/battle/event/attack/attack.c
        src/battle/event/deplacement/deplacement.c
        src/battle/event/spell/cast_spell.c
        src/battle/event/change_turn.c
        src/battle/event/event_management.c
        src/battle/event/interaction.c
        src/battle/event/reset_map_state.c
        src/battle/event/select_or_unselect.c
        src/battle/hero/check_attack.c
        src/battle/hero/check_deplacement.c
        src/battle/hero/display_enemy_dead_animation.c
        src/battle/hero/display_hero_damage.c
        src/battle/hero/hero_attack.c
        src/battle/hero/hero_deplacement.c
        src/battle/hero/hero_set_attack.c
        src/battle/hero/hero_set_deplacement_color.c
        src/battle/init/configure_battle.c
        src/battle/spell/cast_fire.c
        src/battle/spell/cast_heal.c
        src/battle/spell/cast_ice.c
        src/battle/spell/cast_spell.c
        src/battle/spell/cast_storm.c
        src/battle/spell/display_case.c
        src/battle/spell/display_spell_damage.c
        src/battle/spell/hit_the_target.c
        src/battle/battle_management.c
        src/configurations/views/credits/buttons.c
        src/configurations/views/history/buttons.c
        src/configurations/views/main/buttons.c
        src/configurations/views/main/history_button.c
        src/configurations/views/pause/buttons.c
        src/configurations/views/play/buttons.c
        src/configurations/views/selection/buttons.c
        src/configurations/views/settings/buttons.c
        src/configurations/views/settings/sliders.c
        src/configurations/player_configuration.c
        src/configurations/views_config.c
        src/free/free_all.c
        src/managers/assets/callback/sliders/volume_callback.c
        src/managers/assets/callback/actions_callback.c
        src/managers/assets/callback/goto_view_callback.c
        src/managers/assets/callback/goto_view_callback2.c
        src/managers/assets/callback/play_callback.c
        src/managers/assets/buttons_manager.c
        src/managers/assets/getter.c
        src/managers/assets/sliders_manager.c
        src/managers/events/views/battle/events.c
        src/managers/events/views/play/events.c
        src/managers/events/views/settings/keyboard.c
        src/managers/events/mouse_events.c
        src/managers/events/views_events.c
        src/managers/assets_loader_manager.c
        src/managers/assets_manager.c
        src/managers/events_manager.c
        src/managers/player_manager1.c
        src/managers/player_manager2.c
        src/managers/sounds_manager.c
        src/parser/battle_character_parser.c
        src/parser/battle_fights_parser.c
        src/parser/map_parser.c
        src/parser/parse_map_hitboxes.c
        src/parser/parser.c
        src/util_function/create_text.c
        src/util_function/draw_text_type.c
        src/util_function/wait_second.c
        src/utilities/debug/assets_debugger.c
        src/utilities/debug/buttons_debugger.c
        src/utilities/debug/sliders_debugger.c
        src/utilities/args_utils.c
        src/utilities/debug_utils.c
        src/utilities/destroy_utilities.c
        src/utilities/get_next_line.c
        src/utilities/rect_utils.c
        src/utilities/settings_utils.c
        src/utilities/struct_utils.c
        src/utilities/vector_utils.c
        src/utilities/views_utils.c
        src/utilities/windows_utils.c
        src/views/battle_view.c
        src/views/main_view.c
        src/views/menu_views.c
        src/views/play_view.c
        src/main.c
        src/rpg.c)
